--- a/safety-review-frontend/index.html
+++ b/safety-review-frontend/index.html
@@ -523,7 +523,8 @@
 
 <script>
   // >>>>>>>> CONFIG: replace with your Apps Script Web App URL
-  const API_BASE_URL = 'PASTE_YOUR_APPS_SCRIPT_WEB_APP_URL_HERE';
+  const API_BASE_URL = 'https://script.google.com/macros/s/AKfycbz58IugfpxNcA6F5X5tWSUObkKYt6P02J773661RzDYlAV0aEKwzOfFPBlzpGRGeySy9w/exec';
+';
   // <<<<<<<<
 
   let allCases = [];
